hard-gists/6099960/run.log
=== Docker Run Log for 6099960 ===
Started at: Mi 29. Okt 16:19:52 CET 2025

[2025-10-29 16:19:53] START: Running container for 6099960
[2025-10-29 16:19:53] SUCCESS: Container 448f274d4e172e03a4f8d756bd0d4e28483e276af778d56e43c15206bb07d876 started for 6099960
=== Container logs for 6099960 ===
  File "/snippet.py", line 26
    print 'CSS injected!'
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6099960 ===
[2025-10-29 16:19:55] INFO: Container 448f274d4e172e03a4f8d756bd0d4e28483e276af778d56e43c15206bb07d876 has stopped
